--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aditya Fahrezi</title>
-  
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-  <script src="script.js"></script>
-</body>
+  <head>
+    <title>Aditya Fahrezi</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+     <!-- google fonts --> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Borel&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+
+     <!-- style css -->
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+    <nav>
+      <p class="name">Aditya Fahrezi</p>
+
+      <div class="menu-icon">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
+      <a href="">Portfolio</a>
+    </nav>
+
+    <script src="script.js"></script>
+  </body>
 </html>
