--- a/index.html
+++ b/index.html
@@ -29,9 +29,34 @@
     <main>
       <section class="profile">
         <img class="profile-picture" src="img/profile-picture.jpg" alt="profile-picture" />
-        <div class="about-me">
+        <div class="biodata">
           <div class="name"><h1>Aditya Fahrezi</h1></div>
-          <div class="description">web developer • he/him</div>
+          <div class="about-me">web developer • he/him</div>
+        </div>
+      </section>
+      
+      <section class="skills">
+        <div class="part">Skills</div>
+        <!--html-->
+        <div class="skill">
+          <div class="name">HTML</div>
+          <div class="html-icon">
+            <img src="img/html.png" alt="html-icon" />
+          </div>
+        </div>
+        <!--css-->
+        <div class="skill">
+          <div class="name">CSS</div>
+          <div class="html-icon">
+            <img src="img/css.png" alt="css-icon" />
+          </div>
+        </div>
+        <!--javascript-->
+        <div class="skill">
+          <div class="name">Javascript</div>
+          <div class="html-icon">
+            <img src="img/js.png" alt="js-icon" />
+          </div>
         </div>
       </section>
     </main>
